# freertos-gps-tracker

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/gps-uart/: nmea.c  nmea.h
